endorsement: clarify problem, founder credibility, and non-AI positioning

--- a/index.html
+++ b/index.html
@@ -203,7 +203,8 @@
             color: var(--text-primary);
         }
 
-        .hero-subtitle {
+        .hero-subtitle,
+        .hero .subtitle {
             font-size: clamp(17px, 2vw, 20px);
             color: var(--text-secondary);
             max-width: 580px;
@@ -1226,7 +1227,8 @@
                 font-size: 32px;
             }
 
-            .hero-subtitle {
+            .hero-subtitle,
+            .hero .subtitle {
                 font-size: 16px;
             }
 
@@ -1289,9 +1291,8 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Make better product decisions<br>before you buy or sell.</h1>
-                <p class="hero-subtitle">
-                    A structured decision framework that helps individuals, businesses, and sellers 
-                    understand any product — its suitability, risks, and alternatives — before committing.
+                <p class="subtitle">
+                    Designed for small and medium businesses making high-impact purchasing or supplier decisions.
                 </p>
                 <div class="hero-cta">
                     <a href="demo-product.html" class="btn btn-primary">See a Demo Report</a>
@@ -1299,6 +1300,26 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section class="section problem-section">
+      <div class="container">
+        <h2>What problem does Product Intelligence solve?</h2>
+        <p>
+          Businesses already research products using Google, supplier websites, and AI tools.
+          However, the final decision is often made informally — across emails, messages, or verbal discussions —
+          with no single, structured record explaining <strong>why</strong> a product or supplier was chosen.
+        </p>
+        <p>
+          When costs increase, equipment underperforms, or audits occur, teams struggle to justify past decisions.
+          Product Intelligence solves this by converting existing research into a
+          <strong>clear, repeatable, and defensible decision file</strong>.
+        </p>
+        <p>
+          It does not replace research or AI tools.
+          It structures their output into a documented decision that organisations can rely on later.
+        </p>
+      </div>
     </section>
 
     <!-- Why Product Intelligence is Different -->
@@ -1580,6 +1601,25 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section class="section founder-section">
+      <div class="container">
+        <h2>Founder & Why This Exists</h2>
+        <p>
+          Product Intelligence was created by an Operations Support professional working within large-scale
+          logistics and warehouse environments in the UK.
+          Through direct involvement in procurement and operational decision-making,
+          the founder observed that while product research was widely available,
+          structured decision documentation was often missing.
+        </p>
+        <p>
+          This gap frequently leads to repeated decision effort, inconsistent outcomes,
+          and limited accountability when decisions are reviewed later.
+          Product Intelligence was designed to address this exact problem —
+          starting with a manual, framework-led MVP before automation.
+        </p>
+      </div>
     </section>
 
     </main>
