endorsement: strengthen why-not-AI positioning and accountability message

--- a/why-not-ai.html
+++ b/why-not-ai.html
@@ -501,6 +501,23 @@
     <main class="content">
         <div class="container">
 
+            <section class="section ai-verdict">
+              <h2>Why Product Intelligence is not an AI chatbot</h2>
+              <p>
+                AI tools are excellent for answering questions and summarising information.
+                However, they do not create accountable, repeatable decision records.
+              </p>
+              <p>
+                <strong>AI provides answers.</strong><br>
+                <strong>Product Intelligence provides decision accountability.</strong>
+              </p>
+              <p>
+                Product Intelligence sits after research —
+                transforming inputs from AI, suppliers, and search engines
+                into a defensible decision document.
+              </p>
+            </section>
+
             <!-- Core Principle -->
             <section class="section">
                 <h2 class="section-title">Core principle: structure before automation</h2>
