endorsement: clean validation language and narrow customer focus to SMEs

--- a/b2b-pilot.html
+++ b/b2b-pilot.html
@@ -518,7 +518,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>B2B Pilot (UK) — Product Intelligence</h1>
-                <p class="hero-subtitle">Non-commercial pilot to validate structured product evaluation in real business decisions.</p>
+                <p class="hero-subtitle">Early-stage, non-commercial pilot. Manual evaluation and feedback-driven — review one decision file and help shape the framework. No promises we cannot deliver.</p>
                 <div class="hero-cta">
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSdDmWC8ZcaBcDlOpGR52KUW8C9nkYsQlLJJa0YlhWxnWZBaAw/viewform?usp=pp_url" class="btn btn-primary" target="_blank" rel="noopener noreferrer">Book a 10-min Pilot Call</a>
                     <a href="loi-template.html" class="btn btn-secondary">Request an LOI Template</a>
@@ -535,8 +535,8 @@
                 <ol class="steps-list">
                     <li>We review your submission and confirm fit.</li>
                     <li>We request minimal product/context details (only what's needed).</li>
-                    <li>We deliver a structured evaluation report in the agreed format.</li>
-                    <li>We collect feedback to refine the framework for UK SMEs.</li>
+                    <li>We deliver one manual, template-based decision file for your review.</li>
+                    <li>We collect feedback to refine the framework — your input helps shape it.</li>
                 </ol>
                 <p class="trust-line">No obligation — and we do not publish or share your information.</p>
             </div>
@@ -547,12 +547,12 @@
     <section class="content-section">
         <div class="container">
             <div class="content-box">
-                <h3>How the pilot works (non-commercial)</h3>
+                <h3>How the pilot works (non-commercial, early-stage)</h3>
                 <ul>
-                    <li>Book a 10-min call</li>
-                    <li>Share 1 product decision you are considering</li>
-                    <li>We produce 1–2 structured evaluations (manual, template-based)</li>
-                    <li>You receive a PDF-style report + short feedback questions</li>
+                    <li>Book a short call</li>
+                    <li>Share one product or supplier decision you are considering</li>
+                    <li>We produce one structured decision file (manual, template-based) for you to review</li>
+                    <li>You receive the file + short feedback questions — your input helps shape the framework</li>
                 </ul>
             </div>
         </div>
@@ -564,10 +564,10 @@
             <div class="content-box">
                 <h3>What you get in the pilot</h3>
                 <ul>
-                    <li>1–2 product evaluations using the fixed framework</li>
-                    <li>Risks, constraints, suitability + recommendation</li>
-                    <li>Optional seller/procurement angle depending on company needs</li>
-                    <li>Delivered as a structured PDF-style report (static for now)</li>
+                    <li>One manual evaluation using the fixed framework (no automation; early-stage)</li>
+                    <li>Risks, constraints, suitability + recommendation in a single decision file</li>
+                    <li>Optional procurement/sourcing angle depending on your context</li>
+                    <li>Delivered as a structured document (static format for now) — feedback-driven, no promises we cannot deliver</li>
                 </ul>
             </div>
         </div>
@@ -578,12 +578,12 @@
         <div class="container">
             <div class="content-box">
                 <h3>Who this is for</h3>
-                <p>This pilot is designed for:</p>
+                <p>This pilot is for small and medium businesses making high-impact purchasing or supplier decisions:</p>
                 <ul>
                     <li>Procurement teams evaluating tools and products</li>
                     <li>Operations and warehouse managers making purchasing decisions</li>
-                    <li>E-commerce sellers choosing products to sell</li>
-                    <li>SMEs evaluating tools and solutions before purchase</li>
+                    <li>SMEs evaluating equipment, software, or solutions before purchase</li>
+                    <li>E-commerce or sourcing teams choosing what to stock or source</li>
                 </ul>
             </div>
         </div>
