--- a/use-cases.html
+++ b/use-cases.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Use Cases | Product Intelligence</title>
-    <meta name="description" content="Discover how Product Intelligence helps individuals, businesses, and sellers make smarter product decisions.">
+    <meta name="description" content="How Product Intelligence helps small and medium businesses make defensible, high-impact purchasing and supplier decisions.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,400;9..40,500;9..40,600;9..40,700&display=swap" rel="stylesheet">
@@ -441,43 +441,23 @@
     <div class="mvp-banner" style="margin-top: 72px;">
       <div class="mvp-banner-inner">
         <span class="mvp-badge">MVP</span>
-        Proof-of-Concept — This page demonstrates how Product Intelligence serves different user types.
+        Proof-of-Concept — This page shows how Product Intelligence supports SMEs and business decision-makers.
       </div>
     </div>
 
     <!-- Page Header -->
     <section class="page-header" style="padding-top: 60px;">
         <div class="container">
-            <h1>Product Intelligence for Every Decision</h1>
-            <p>One intelligence platform. Three ways to use it — depending on who you are and what decision you need to make.</p>
+            <h1>Product Intelligence for High-Impact Decisions</h1>
+            <p>Focused on small and medium businesses making high-impact purchasing or supplier decisions. Example scenarios for business, sourcing, and personal contexts below.</p>
         </div>
     </section>
 
-    <!-- Use Case 1: Individuals -->
-    <section class="use-case">
-        <div class="container">
-            <div class="use-case-header">
-                <span class="use-case-label">Use Case 1</span>
-                <h2 class="use-case-title">For Individuals</h2>
-                <p class="use-case-subtitle">Decision: Choosing a product for personal or household use.</p>
-            </div>
-            <div class="use-case-content">
-                <ul class="use-case-list">
-                    <li><strong>Without PI:</strong> Risk of buying the wrong product, overspending on features you don't need, or missing better alternatives buried in reviews.</li>
-                    <li><strong>With PI:</strong> Clear suitability assessment before purchase — understand what fits your needs, budget, and situation without hours of research.</li>
-                </ul>
-                <div class="use-case-outcome">
-                    <p>Fewer regrets. Less time wasted. Confidence that you chose the right product.</p>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Use Case 2: Businesses & Industry -->
+    <!-- Use Case 1: Businesses & Industry (primary focus) -->
     <section class="use-case business">
         <div class="container">
             <div class="use-case-header">
-                <span class="use-case-label">Use Case 2</span>
+                <span class="use-case-label">Use Case 1</span>
                 <h2 class="use-case-title">For Businesses & Industry</h2>
                 <p class="use-case-subtitle">Decision: Evaluating equipment, tools, or supplies for operational use.</p>
             </div>
@@ -493,11 +473,11 @@
         </div>
     </section>
 
-    <!-- Use Case 3: E-commerce & Sellers -->
+    <!-- Use Case 2: E-commerce & Sellers -->
     <section class="use-case">
         <div class="container">
             <div class="use-case-header">
-                <span class="use-case-label">Use Case 3</span>
+                <span class="use-case-label">Use Case 2</span>
                 <h2 class="use-case-title">For E-commerce & Sellers</h2>
                 <p class="use-case-subtitle">Decision: Choosing which products to source, stock, or list.</p>
             </div>
@@ -513,11 +493,31 @@
         </div>
     </section>
 
+    <!-- Use Case 3: Individuals -->
+    <section class="use-case">
+        <div class="container">
+            <div class="use-case-header">
+                <span class="use-case-label">Use Case 3</span>
+                <h2 class="use-case-title">For Individuals</h2>
+                <p class="use-case-subtitle">Decision: Choosing a product for personal or household use.</p>
+            </div>
+            <div class="use-case-content">
+                <ul class="use-case-list">
+                    <li><strong>Without PI:</strong> Risk of buying the wrong product, overspending on features you don't need, or missing better alternatives buried in reviews.</li>
+                    <li><strong>With PI:</strong> Clear suitability assessment before purchase — understand what fits your needs, budget, and situation without hours of research.</li>
+                </ul>
+                <div class="use-case-outcome">
+                    <p>Fewer regrets. Less time wasted. Confidence that you chose the right product.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Closing CTA -->
     <section class="closing-cta">
         <div class="container">
-            <h2>Choose how you want to use Product Intelligence.</h2>
-            <a href="app.html" class="btn btn-primary">Get Started</a>
+            <h2>See how the framework works for your next high-impact decision.</h2>
+            <a href="b2b-pilot.html" class="btn btn-primary">Join the B2B Pilot</a>
         </div>
     </section>
 
